agni/web/static/agni_map.css
html body main #main-row {
	width: 100%;
}

body {
	overflow: hidden;
}

head {
	padding: 0;
}

.fixed-height {
	height: 100%;
	width: 100vh;
}

.container {
	margin: 0 auto;
	max-width: 100vw;
	width: 90% !important;
}

#main-row {
	/*display: flex;*/
	height: calc(100vh - 64px);
	overflow: hidden;
}

#mapdisplay {
	height: 100%;
}

@media screen and (max-width: 600px){
	#mapdisplay {
		height: 50%;
	}
}

#mapcontrols {
	padding-top: 1em;
	overflow: auto;
	scrollbar-width: thin;
}

.fullwidth-btn {
	width: 100%;
}

.toast-text i {
	margin-right: 1ex;
}
/*
.switch {
	padding:5px 5px;
	margin: 10px;
}
*/

